backend/reconcile/src/operation_transformation/snapshots/reconcile__operation_transformation__edited_text__tests__calculate_operations.snap
---
source: reconcile/src/operation_transformation/edited_text.rs
expression: operations
snapshot_kind: text
---
EditedText {
    text: "hello world! How are you?  Adam",
    operations: [
        OrderedOperation {
            order: 0,
            operation: <insert 'Hello, my friend! ' from index 0>,
        },
        OrderedOperation {
            order: 0,
            operation: <delete 'hello world! ' from index 18>,
        },
        OrderedOperation {
            order: 21,
            operation: <insert 'you doing? Albert' from index 26>,
        },
        OrderedOperation {
            order: 21,
            operation: <delete 'you?  Adam' from index 43>,
        },
    ],
}
