backend/reconcile/src/operation_transformation/snapshots/reconcile__operation_transformation__edited_text__tests__calculate_operations_with_no_diff.snap
---
source: reconcile/src/operation_transformation/edited_text.rs
expression: operations
snapshot_kind: text
---
EditedText {
    text: "hello world!",
    operations: [
        OrderedOperation {
            order: 0,
            operation: <equal 'hello world!' from index 0>,
        },
    ],
    cursors: [],
}
